# sanqy

./: .gitignore
cpp/: .gitignore  Makefile  dbShema  main.cpp
cpp/header/: card.h  daily_status.h  db.h  deck.h  def.h  heap.h  lut.h  random_pool.h  sanqy.h  status.h
cpp/src/: daily_status.cpp  db.cpp  deck.cpp  heap.cpp  lut.cpp  main.cpp  random_pool.cpp  sanqy.cpp  status.cpp
sanqy_flutter_app/: .gitignore  README.md  pubspec.yaml
sanqy_flutter_app/android/: CMakeLists.txt
sanqy_flutter_app/android/app/: build.gradle
sanqy_flutter_app/android/app/src/main/: AndroidManifest.xml
sanqy_flutter_app/android/app/src/main/kotlin/com/example/sanqy_flutter_app/: MainActivity.kt
sanqy_flutter_app/ios/Runner/: Info.plist
sanqy_flutter_app/ios/Runner.xcodeproj/: project.pbxproj
sanqy_flutter_app/lib/: add_deck.dart  add_mod_card.dart  deck_action.dart  deck_selector.dart  ffi_def.dart  list_card.dart  m_time.dart  main.dart  study.dart
sanqy_flutter_app/linux/: CMakeLists.txt  my_application.cc
sanqy_flutter_app/macos/Runner.xcodeproj/: project.pbxproj
sanqy_flutter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
sanqy_flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
sanqy_flutter_app/test/: widget_test.dart
sanqy_flutter_app/web/: index.html  manifest.json
sanqy_flutter_app/windows/: CMakeLists.txt
sanqy_flutter_app/windows/runner/: Runner.rc  main.cpp
